--- a/src/pages/kiosk/Kiosk.css
+++ b/src/pages/kiosk/Kiosk.css
@@ -1,18 +1,19 @@
 .containerbg{height: 100%; width: 100%; background-image: radial-gradient(circle at top center, #6567a0 7%, #252758);}
-.bgImage{background: url("../../images/bottombg.PNG") bottom right no-repeat; background-size: 50%}
+.bgImage{background: url("../../images/bottombg.PNG") bottom right 20px no-repeat; background-size: 45%}
 .topbar{padding:15px 20px; position: fixed; width: 100%}
 .topbar .topheader{align-items: center}
 .kiosk-footer{padding:20px; position: fixed;  right: 0;  bottom: 0;  width: 100%; z-index: 1}
 .kiosk-footer img{cursor: pointer; margin-left: 15px}
 .kiosk-footer .footerLeft{display: flex; align-items: flex-end}
-.kiosk-footer .copyRight{ color: #ffffff; font-size: 15px;}
+.kiosk-footer .copyRight{ color: #ffffff; font-size: 14px; font-weight: normal;}
 .date-time{ display:flex; flex-direction: column; align-items: flex-end; justify-content: flex-end; text-align: center}
 .date-time p{ color: #ffffff;margin-bottom: 0;line-height: 1.3;}
 .date-time .time{font-size:40px;}
 .date-time .day{font-size:15px; font-weight: 400}
 .welcometext h2{font-size:64px !important}
-.kiosk-content{padding:20px; padding-bottom: 50px;  display: flex; padding-top: 80px; width: 100%;justify-content: center; align-items: center; height: 100%;}
-.content-sec{margin:0 !important;}
+.pad-lft30{padding-left:30px !important}
+.kiosk-content{padding:20px; padding-bottom: 60px;  display: flex; padding-top: 80px; width: 100%;justify-content: center; align-items: center; height: 100%;}
+.content-sec{margin:0 !important}
 .content-sec p{color:#ffffff; font-size: 18px;}
 .content-sec h1{color: #ffffff; font-family: "Roboto", sans-serif }
 .content-sec h2{color: #ffffff; font-size:30px; font-family: "Roboto", sans-serif; font-weight: 500 }
@@ -41,16 +42,17 @@
 .verification-btn:first-child { background: #fcf0e3; color: #000000; border: none}
 .btn-icon { font-size: 50px;}
 .pad-btm30{padding-bottom: 30%}
-.feedback-sec img{width:20%; margin-right:15px}
+.feedback-sec img{width:16%; margin-right:15px}
 .feedback-sec img:hover {top:0; position: relative; animation-name: swing; animation-duration: 1s;}
-.feedback-sec p{margin-top: 25px;}
-.tokenmsg h3{color: #ffffff; font-family: "Roboto", sans-serif}
-.tokenmsg h1{font-size: 70px}
-.tokenmsg{display: flex; align-items: center; justify-content: center; flex-direction: column}
+.feedback-sec p{margin-top: 25px; font-size: 20px;}
+.tokenmsg h3{color: #ffffff; font-family: "Roboto", sans-serif; margin-bottom: 0; font-weight: 500;}
+.tokenmsg h1{font-size: 65px; font-weight: 500; margin-top: 0; margin-bottom: 0;}
+.tokenmsg p { font-size: 18px; font-weight: normal;}
+.tokenmsg{display: flex; align-items: flex-end; justify-content: center; flex-direction: column}
 .appointments-container { padding-bottom: 40px; width: 100%;display: flex; overflow-x: auto; -ms-overflow-style: none; -webkit-overflow-scrolling: touch; }
 
 .appointments-container .appointment { background: #ffffff; border-radius: 10px; box-shadow: 5px 5px 10px #23264F; 
-        margin-right: 1%; color: #54599c; padding:15px 20px;  flex:1 0 31%; position: relative;}
+        margin-right: 15px; color: #54599c; padding:15px;  flex:1 0 30%; position: relative;}
 .appointments-container .appointment:last-child{margin-right: 3%}
 .appointments-container::-webkit-scrollbar {
     display: none; width: 0 !important;
@@ -64,16 +66,17 @@
 .appointment-button button { font-size: 18px; padding: 10px 40px;   box-shadow: 0 2px 6px 0 rgba(93, 98, 181, 0.24);}
 .appointments-text {padding-left:20px}
 .appointment-button .btn-primary, .appointment-button .btn-primary:hover, .appointment-button .btn-primary:focus, .appointment-button .btn-primary:active{background: #5d62b5 !important; border: #5d62b5 !important}
-.appointments-text h2 { font-size: 40px; margin-bottom: 20px}
+.appointments-text h2 { font-size: 40px; margin-bottom: 35px}
 .verfcontent{display: flex; justify-content: center; align-items: center}
-.verfcontent h1{font-weight: 500 !important}
+.verfcontent h1{font-weight: 500 !important; font-size:40px !important}
+.verfcontent h2{font-size: 24px;}
 .errorMessage { display: flex; flex-direction: column; position:relative; background: #191C47; color: #ffffff; padding: 15px; border-radius: 10px; box-shadow: 10px 10px 10px #23264F; }
 .errorMessage p {  font-size: 26px; text-align: center;}
 .errorMessage .close-button { width: 30px; height: 30px; cursor:pointer; background: #ffffff; color: #F47270; position: absolute; border-radius: 50%; top:-15px; right: -15px; display: flex; justify-content: center; align-items: center;}
 .errorMessage .close-button i{font-weight: 900}
 
 /* Token print css*/
-.tableCard{ background: rgb(255, 255, 255); padding: 15px 20px; box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 30px 0px; width: 85%;}
+.tableCard{ background: rgb(255, 255, 255); padding: 15px 20px; box-shadow: rgba(0, 0, 0, 0.24) 0px 10px 30px 0px; width: 100%;}
 .tableWidth{width: 100%; font-size: 14px; color: #191919 }
 .tableHeader-img{width: 100%; padding: 5px;}
 .tableHeader{width: 100%; padding: 0px 5px; margin: 10px auto;}
@@ -87,7 +90,7 @@
 .tokenNum {text-align: center; font-weight: bold; font-size: 50px; margin-top: 0px; margin-bottom: 5px; color: #191919 !important;}
 .barcode{width: 80%; border: 0px; margin-left: auto; margin-right: auto; margin-bottom: 10px;}
 .barcode img{display: block; margin: 0px auto;}
-.bottomdetails{text-align: center; font-size: 12px; line-height: 20px; display: block;}
+.bottomdetails{text-align: center; font-size: 11px; line-height: 15px; display: block;}
 /* Keyboard css*/
 .frmInput{    text-align: right;
     width: 83%;}
