--- a/src/pages/kiosk/Kiosk.css
+++ b/src/pages/kiosk/Kiosk.css
@@ -47,6 +47,8 @@
 .verification-btn:first-child { background: #fcf0e3; color: #000000; border: none}
 .btn-icon { font-size: 50px;}
 .pad-btm30{padding-bottom: 30%}
+.pad-btm15{padding-bottom: 15%}
+.pad-btm20{padding-bottom: 20%}
 .feedback-sec img{width:18%; margin-right:15px}
 .feedback-sec img:hover {top:0; position: relative; animation-name: swing; animation-duration: 1s;}
 .feedback-sec p{margin-top: 25px; font-size: 22px;}
@@ -57,7 +59,7 @@
 .appointments-container { padding-bottom: 40px; width: 100%;display: flex; overflow-x: auto; -ms-overflow-style: none; -webkit-overflow-scrolling: touch; }
 .pad-left0{padding-left: 0 !important;}
 .appointments-container .appointment { background: #ffffff; border-radius: 10px; box-shadow: 5px 5px 10px #23264F; 
-        margin-right: 15px; color: #54599c; padding:15px;  flex:1 0 30%; position: relative;}
+        margin-right: 15px; color: #54599c; padding:15px;  flex:1 0 30%; max-width: 30%; position: relative;}
 .appointments-container .appointment:last-child{margin-right: 3%}
 .appointments-container::-webkit-scrollbar {
     display: none; width: 0 !important;
@@ -67,7 +69,7 @@
 .appointment-property:last-child { padding-bottom: 70px;}
 .appointment-value { font-size: 18px; font-weight: bold; word-break: break-all}
 .appointment-key { font-size: 14px;}
-.appointment-button { text-align: center; position: absolute; bottom: 15px; right: 0;left:0;}
+.appointment-button { text-align: center; position: absolute; bottom: 15px; right: 0;left:0;z-index: 999;}
 .appointment-button button { font-size: 18px; padding: 10px 40px;   box-shadow: 0 2px 6px 0 rgba(93, 98, 181, 0.24);}
 .appointments-text {padding-left:20px}
 .appointment-button .btn-primary, .appointment-button .btn-primary:hover, .appointment-button .btn-primary:focus, .appointment-button .btn-primary:active{background: #5d62b5 !important; border: #5d62b5 !important}
@@ -140,6 +142,15 @@
 .simple-keyboard.hg-layout-shift .hg-row:last-child>div:last-child, .simple-keyboard.hg-layout-small .hg-row:last-child>div:last-child,.simple-keyboard.hg-layout-shift .hg-row:last-child>div:first-child, .simple-keyboard.hg-layout-small .hg-row:last-child>div:first-child {
     max-width: 75px;
 }
+
+.mrnstyle .frmInput{width:100%; text-align: center !important;}
+.error-msg span{color:red; background-color: #ffffff; padding: 10px 20px; border-radius:5px; }
+.txt-rgt{text-align: right;}
+.txt-lft{text-align: left;}
+.frmInput input.form-control, .frmInput input.form-control:focus{margin-bottom: 20px;}
+.modal-content {background-color: transparent !important; border:none !important;}
+.modal-backdrop {background-color: #fff !important;}
+
 
 @keyframes swing {
     0%   {top:0 }
