--- a/src/pages/kiosk/Kiosk.css
+++ b/src/pages/kiosk/Kiosk.css
@@ -6,7 +6,7 @@
 .kiosk-footer img{cursor: pointer; margin-left: 15px}
 .kiosk-footer .footerLeft{display: flex; align-items: flex-end}
 .kiosk-footer .copyRight{ color: #ffffff; font-size: 14px; font-weight: normal;}
-.date-time{ display:flex; flex-direction: column; align-items: flex-end; justify-content: flex-end; text-align: center}
+.date-time{ display:flex; flex-direction: column; text-align: center}
 .date-time p{ color: #ffffff;margin-bottom: 0;line-height: 1.3;}
 .date-time .time{font-size:40px;}
 .date-time .day{font-size:15px; font-weight: 400}
